following variables nil: 'emacs-build-system', 'emacs-build-time',
'erc-emacs-build-time'.

---
** Emacs can now be built with support for Little CMS.

+++
** The new user option 'electric-quote-replace-double' controls
whether '"' is also replaced in 'electric-quote-mode'.  If non-nil,
'"' is replaced by a double typographic quote.


* Changes in Specialized Modes and Packages in Emacs 27.1

** Edebug

+++
*** The runtime behavior of Edebug's instrumentation can be changed
using the new variable 'edebug-behavior-alist' and the new abnormal
hooks 'edebug-after-instrumentation-functions' and
'edebug-new-definition-functions'. Edebug's behavior can be changed
globally or for individual definitions.

** Enhanced xterm support

*** New variable 'xterm-set-window-title' controls whether Emacs sets
the XTerm window title.  This feature is experimental and is disabled
by default.


* Startup Changes in Emacs 26.1


* Changes in Emacs 26.1

+++
** Option 'buffer-offer-save' can be set to new value, 'always'.  When
   set to 'always', the command `save-some-buffers' will always offer
   this buffer for saving.

** Security vulnerability related to Enriched Text mode is removed.

+++
*** Enriched Text mode does not evaluate Lisp in 'display' properties.
This feature allows saving 'display' properties as part of text.
Emacs 'display' properties support evaluation of arbitrary Lisp forms
as part of processing the property for display, so displaying Enriched
Text could be vulnerable to executing arbitrary malicious Lisp code
included in the text (e.g., sent as part of an email message).
Therefore, execution of arbitrary Lisp forms in 'display' properties
decoded by Enriched Text mode is now disabled by default.  Customize
the new option 'enriched-allow-eval-in-display-props' to a non-nil
value to allow Lisp evaluation in decoded 'display' properties.

This vulnerability was introduced in Emacs 21.1.  To work around that